objects/User.object
<CustomObject>
    <fields>
        <fullName>TimeclockOnline__TCOPassword__c</fullName>
        <description>This is your TimeclockOnline.com password.</description>
        <label>TCOPassword</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeclockOnline__TCOUsername__c</fullName>
        <description>The username used when logging into your TimeclockOnline.com account. It is either your email address or numeric user ID.</description>
        <externalId>true</externalId>
        <label>TCOUsername</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeclockOnline__TimeclockOnlinePassword__c</fullName>
        <description>Password for TimeclockOnline.com</description>
        <label>TimeclockOnline.com Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeclockOnline__TimeclockOnlineUsername__c</fullName>
        <description>Username for TimeclockOnline.com</description>
        <externalId>true</externalId>
        <inlineHelpText>Enter your Username or Email Address</inlineHelpText>
        <label>TimeclockOnline.com Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__EchoSign_Allow_Delegated_Sending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box so that others in this Salesforce organization can send Adobe Sign agreements on behalf of this user.</description>
        <inlineHelpText>Check this box so that others in this Salesforce organization can send Adobe Sign agreements on behalf of this user.</inlineHelpText>
        <label>Adobe Sign Allow Sending As Other Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__EchoSign_Email_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox indicates that the user&apos;s email address has been validated in Adobe Sign API.</description>
        <inlineHelpText>This checkbox indicates that the user&apos;s email address has been validated in Adobe Sign API.</inlineHelpText>
        <label>Adobe Sign Email Verified</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>